crates/keron-lang/tests/corpus/errors/check/struct_field_type_mismatch.keron
struct Point { x: Int, y: Int }

val p: Point = Point { x: "zero", y: 0 }
